# fastapi_template

./: README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/app/libs/: base_api_service.py  base_repository.py
backend/app/libs/exceptions/: api_exceptions.py
backend/app/libs/http_clients/: google_http_client.py
backend/app/models/: __init__.py  users.py
backend/app/users/exceptions/: auth_exceptions.py
backend/app/users/models/: __init__.py  oauth_models.py
backend/app/users/repositories/: oauth_repositories.py  users_repositories.py
backend/app/users/routers/: auth_routers.py
backend/app/users/schemas/: auth_schemas.py
backend/app/users/services/auth/: auth.py  google_auth.py
backend/core/: config.py  db.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_first_revision.py
